# claude

./: CHANGELOG.md  PM_INTERVENTION_REQUIRED  README-subtree-sync.md  README.md  TECH-DEBT-REMINDER-DELIVERY-REPORT.md  agent-collaboration.md  dispatch-active.json  document-responsibilities.md  format-fix-examples.md  hook-system-reference.md  installed-packages.json  pm-status.json  quick-ref-pre-fix-eval.md  settings.json  settings.local.json  tdd-collaboration-flow.md  thinking-process.md
skills/ticket/: CHAIN_INDEX_USAGE.md  CYCLE_DETECTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  RELATED_TO_FEATURE.md  SKILL.md  pyproject.toml  test_migration_dryrun.py
skills/ticket/examples/: cycle_detection_example.py
skills/ticket/hooks/: acceptance-gate-hook.py  agent-dispatch-validation-hook.py  agent-ticket-validation-hook.py  ana-ticket-metadata-validation-hook.py  cli-error-feedback-hook.py  creation-acceptance-gate-hook.py  handoff-auto-resume-stop-hook.py  handoff-cleanup-hook.py  handoff-prompt-reminder-hook.py  handoff-reminder-hook.py  needs-context-listener-hook.py  post-ticket-complete-checkpoint-hook.py  post-ticket-lifecycle-hook.py  stop-worklog-handoff-sync-check-hook.py  ticket-file-access-guard-hook.py  ticket-frontmatter-validator-hook.py  ticket-id-validator-hook.py  ticket-path-guard-hook.py  ticket-quality-gate-hook.py  ticket-reinstall-hook.py  ticket-skill-sync-check-hook.py
skills/ticket/references/: architecture.md  completeness-check.md  create-command.md  generate-command.md  handoff-command.md  migrate-command.md  resume-command.md  track-command.md  (+3 more)
(+1614 files in other folders)
