[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-system"
version = "1.0.0"
description = "Unified Ticket System for Claude Code - 整合 create/track/handoff/resume 四大功能的統一 Ticket 管理系統"
readme = "SKILL.md"
requires-python = ">=3.9"
dependencies = ["pyyaml>=5.0"]
authors = [
    {name = "Claude Code", email = "claude@anthropic.com"}
]
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ticket = "ticket_system.scripts.ticket:main"

[tool.hatch.build.targets.wheel]
packages = ["ticket_system"]

[tool.hatch.build.targets.sdist]
include = [
    "ticket_system/**/*.py",
    "pyproject.toml",
    "SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--verbose"
